# ZEmbeddings

./: .agent-hints.md  .coverage  .env.example  .gitignore  MANIFESTO.md  README.md  pyproject.toml
config/: default.yaml
config/experiments/: exp_001_synthetic_topic_shift.yaml  mvp_smoke.yaml
context/: architecture.yaml  conventions.yaml  glossary.yaml  ingestion_strategy.yaml
data/synthetic/: fixation_test.txt  fixation_test_ground_truth.json  rapid_shifts.txt  rapid_shifts_ground_truth.json  topic_shift_001.txt  topic_shift_001_ground_truth.json
player/: README.md  inspector.py  server.py
player/static/: app.js  index.html  inspector.css  inspector.html  inspector.js  style.css
results/metrics/: 0020a0c5-1658-4747-99c1-2839e736b481_20260326_175115.yaml  002d68da-7738-4177-89d9-d72ae803e0e4_20260326_175248.yaml  00411458-8275-4b92-a000-d52187f03604_20260326_175458.yaml  00ae2f18-9599-4df6-8e3a-6936c86b97f0_20260326_175612.yaml  00b410f7-8b5f-4404-8433-0fb8c4be8f62_20260326_175756.yaml  exp_001_synthetic_topic_shift_20260326_082340.yaml  exp_001_synthetic_topic_shift_20260326_174909.yaml  exp_001_synthetic_topic_shift_20260326_184020.yaml  exp_001_synthetic_topic_shift_20260326_184509.yaml  exp_001_synthetic_topic_shift_20260326_184537.yaml  mvp_smoke_fixation_20260326_190710.yaml  mvp_smoke_fixation_20260326_191116.yaml  mvp_smoke_fixation_20260326_191137.yaml  pilot_speaker_R_20260326_072415.yaml
results/reports/: 0020a0c5-1658-4747-99c1-2839e736b481_20260326_175117.md  002d68da-7738-4177-89d9-d72ae803e0e4_20260326_175250.md  00411458-8275-4b92-a000-d52187f03604_20260326_175459.md  00ae2f18-9599-4df6-8e3a-6936c86b97f0_20260326_175613.md  00b410f7-8b5f-4404-8433-0fb8c4be8f62_20260326_175757.md  exp_001_synthetic_topic_shift_20260326_082340.md  exp_001_synthetic_topic_shift_20260326_174909.md  exp_001_synthetic_topic_shift_20260326_184020.md  exp_001_synthetic_topic_shift_20260326_184509.md  exp_001_synthetic_topic_shift_20260326_184537.md  ingestion_report.json  mvp_smoke_fixation_20260326_190710.md  mvp_smoke_fixation_20260326_191116.md  mvp_smoke_fixation_20260326_191137.md  pilot_speaker_R_20260326_072416.md
scripts/: generate_conversations.py  ingest_conversations.py  run_corpus.py  run_corpus.sh  run_experiment.py  run_experiment.sh  run_ingest.sh  run_tests.sh  setup_database.py  start.sh
src/zembeddings/: .agent-hints.md  __init__.py  database.py  embeddings.py  ingest.py  io.py  kalman.py  metrics.py  params.py  pipeline.py  tokenizer.py
tests/: test_embeddings.py  test_ingest.py  test_integration.py  test_io.py  test_kalman.py  test_metrics.py  test_params.py  test_pipeline.py  test_tokenizer.py
(+4965 files in other folders)
